<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserProfile.UserProfile.App.UserProfile.UserSignIn">


    <!-- Login progress -->


    <TextView
        android:id="@+id/text_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="Evaluate your website"
        android:textColor="#1b1a1a"
        android:textSize="27dp"
        android:textStyle="bold" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:theme="@style/TextLabel">

        <AutoCompleteTextView
            android:id="@+id/text_signin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family"
            android:hint="@string/prompt_email"
            android:imeActionId="@+id/next"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#211f1f"
            android:textSize="20dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel" >

        <EditText
            android:id="@+id/text_signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@string/font_family"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#232020"
            android:textSize="20dp" />

    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="0.16"
        android:indeterminate="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:height="60dp"
        android:background="#ea1717"
        android:text="@string/action_sign_in"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/SignInText"
        android:textColor="#032109"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="goToSignUpPage"
        android:text="@string/SignUpLink"
        android:textColor="#742206"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:text="Don't remember your password?"
        android:textColor="#f10b0b"
        android:textSize="15dp"
        android:textStyle="" />

</LinearLayout>
