<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".UserProfile.UserProfile.App.UserProfile.UserSignUp">


    <!-- SignUpActivity-->
    <!--TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_signup"
        android:textColor="#f54e0c"
        android:text="@string/prompt_signup"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="33dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" /-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/text_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:fontFamily="@string/font_family"
            android:hint="@string/prompt_name"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#181717"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/text_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_signup_name"
            android:layout_alignStart="@+id/text_signup_name"
            android:layout_below="@+id/text_signup_name"
            android:fontFamily="@string/font_family"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#302d2d"
            android:textSize="20dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/text_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_signup_email"
            android:fontFamily="@string/font_family"
            android:hint="@string/prompt_signup_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#1e1d1d"
            android:textSize="20dp" />

    </android.support.design.widget.TextInputLayout>

    <!--android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        android:id="@+id/button4"
        android:layout_below="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="115dp">

        <EditText
            android:id="@+id/text_signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone"
            android:imeActionId="@+id/sign_up"
            android:imeActionLabel="@string/action_sign_up_short"
            android:imeOptions="actionUnspecified"
            android:textColor="#fdfdfd"
            android:maxLines="1"
            android:textSize="20dp"
            android:singleLine="true"
            android:fontFamily="@string/font_family"
            android:layout_below="@+id/text_signup_password"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </android.support.design.widget.TextInputLayout-->


    <Button
        android:id="@+id/email_sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text_signin"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/text_signin"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/view2"
        android:layout_marginTop="45dp"
        android:height="60dp"
        android:background="#ea1717"
        android:text="@string/action_sign_up"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_sign_up_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/textView"
        android:clickable="true"
        android:onClick="goToSignInActivity"
        android:text="@string/SignInLink"
        android:textColor="#742206"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email_sign_up_button"
        android:layout_marginLeft="62dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="40dp"
        android:text="@string/AccountAlready"
        android:textColor="#200b3e"
        android:textSize="15dp" />


</RelativeLayout>








